bootstrap/files/examples/jaeger-otlp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-http-route
  namespace: observability
spec:
  parentRefs:
    - name: cilium-gateway
      sectionName: http # 对应 Gateway 的监听器名称
      namespace: default
  hostnames:
    - "jaeger-http.dev.test"
  rules:
    - backendRefs:
        - name: jaeger
          port: 4318
